<?xml version="1.0"?>
<package format="2">
  <name>point_cloud_projection</name>
  <version>0.0.1</version>
  <description>The point_cloud_projection package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <!--<depend>cv_bridge</depend>-->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <build_depend>opencv</build_depend>
  <exec_depend>opencv</exec_depend>

  <export>
  </export>
</package>

